# Grafik

projects/ImGuiExample/code/: exampleapp.cc
projects/Raytracer/: CMakeLists.txt
projects/Raytracer/code/: Camera.h  Matrix4D.h  Ray.h  Shape.h  ShapeList.h  Sphere.h  Thing.h  Vector4D.h  main.cpp
projects/assignment-1/code/: Main.cpp  Vector4D.h
projects/assignment-2/: .~lock.CMakeLists.txt#  CMakeLists.txt
projects/assignment-2/code/: MeshResource.cpp  MeshResource.h  exampleapp.cc
